--- a/index.html
+++ b/index.html
@@ -264,12 +264,12 @@
         },
         {
           q: "11. Qual função retorna o MAIOR valor numérico em um intervalo de células?",
-          options: ["=MAIOR()", "=MÁXIMO()", "=ALTO()", "=GRANDE()"],
+          options: ["=MAIORQUE()", "=MÁXIMO()", "=ALTO()", "=GRANDE()"],
           answer: 1,
         },
         {
           q: "12. Se você deseja encontrar o MENOR valor em um conjunto de dados, qual função deve utilizar?",
-          options: ["=MÍNIMO()", "=PEQUENO()", "=BAIXO()", "=MENOR()"],
+          options: ["=MÍNIMO()", "=PEQUENO()", "=BAIXO()", "=MENORQUE()"],
           answer: 0,
         },
         {
